--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=5000
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
